--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="plate" id="plate-three"></div>
     </div>
 
+    <script src="kitchen.js"></script>
     <script src="sandwich-maker.js"></script>
     <script src="set-plate-one.js"></script>
     <script src="set-plate-two.js"></script>
